<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/APP_COLOR_GREY_DARK"
    android:orientation="vertical" >

         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

     <!--    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/wolfpack_back_arrow" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:text="@string/APPNAME"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/APP_COLOR_WHITE" />
             -->
                 <include layout="@layout/header"/>
             
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
 />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignBottom="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/photo_oval_button"
            android:text="+ Photo"
            android:textColor="@color/APP_COLOR" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/APP_COLOR_WHITE">

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:drawableLeft="@drawable/icon_cell_user"
            android:hint="@string/FirstNameText"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:drawableLeft="@drawable/icon_cell_user"
            android:hint="@string/LastNameText"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/APP_COLOR_WHITE"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_cell_user"
            android:hint="@string/UserNameText"
            android:ems="10" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EmailText"
            android:drawableLeft="@drawable/icon_cell_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
          	android:drawableLeft="@drawable/icon_cell_password"
            android:hint="@string/PasswordText"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableLeft="@drawable/icon_cell_password"
            android:hint="@string/confirmpasswordText"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/CalendarEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CalendarText"
            android:drawableLeft="@drawable/icon_cell_calendar"
            android:ems="10" />

    </LinearLayout>

       <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center|bottom"
             android:orientation="vertical" >

             <Button
                 android:id="@+id/RegisterButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/APP_COLOR"
            	 android:textColor="@color/APP_COLOR_WHITE"
                 android:text="BECOME A MEMBER" />

         </LinearLayout>

</LinearLayout>