<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/welcome_hdpi">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/appLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/WolfPack"
        android:textColor="@color/APP_COLOR_WHITE"
        android:textSize="30dp"
        android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageWalf"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_loginpage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RunLabel"
            android:layout_marginTop="20dp"
            android:textColor="@color/APP_COLOR_WHITE"
            android:layout_gravity="center_horizontal"
            android:id="@+id/runLabel" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/signin_button"
            android:textColor="@color/APP_COLOR_WHITE"
            android:text="@string/SignInFacebbokButton"
            android:id="@+id/FacebookButton" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/APP_COLOR"
            android:text="@string/LoginButton"
            android:layout_weight="1"
            android:textColor="@color/APP_COLOR_WHITE"
            android:layout_marginRight="0.5dp"
            android:id="@+id/LoginButton" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/RegisterButtton"
            android:layout_weight="1"
            android:textColor="@color/APP_COLOR_WHITE"
            android:layout_marginLeft="0.5dp"
            android:background="@drawable/button_wolf"
            android:id="@+id/RegisterButton" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TermsLabel1"
            android:id="@+id/termsLabel1"
            android:textColor="@color/APP_COLOR_WHITE"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/infoImage"
            android:src="@drawable/info"
            android:tint="@color/APP_COLOR"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/termsLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsLabel1"
            android:layout_centerHorizontal="true"
            android:text="@string/TermsLabel2"
            android:textColor="@color/APP_COLOR_WHITE" />

    </RelativeLayout>

    <!--   <LinearLayout
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="25dp"
           android:layout_gravity="center_horizontal">




           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginLeft="80dp"

               android:text="By Clicking Register You Agree To"
               android:id="@+id/textView5" />

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="30dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="10dp"
                   android:id="@+id/imageView3"
                   android:src="@drawable/info" />

           </LinearLayout>

       </LinearLayout>
   -->
</LinearLayout>